white space fix

--- a/pandoc/htmlstyle.css
+++ b/pandoc/htmlstyle.css
@@ -79,7 +79,7 @@ blockquote ul{
 code {
   font-family: 'Roboto Mono', monospace;
   background-color: #f2f2f2;
-  /*white-space: pre-wrap;*/
+  white-space: pre-wrap;
 }
 
 .poem code {
